# scriptlink

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  run.sh  watch.sh
src/: main.rs
