[package]
name = "scriptlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
colored = "2.0.0"
notify = "5.1.0"
notify-debouncer-mini = "0.2.1"
structopt = "0.3.26"
tokio = { version = "1.27.0", features = ["full"] }
